--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <div class="product-f-image">
                   <img src="images/small/img2.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(2)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('2')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=2" class="view-details-link" draggable="false">
@@ -339,7 +339,7 @@
                 <div class="product-f-image">
                   <img src="images/small/img6.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(6)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('6')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=6" class="view-details-link" draggable="false">
@@ -362,7 +362,7 @@
                 <div class="product-f-image">
                   <img src="images/small/img10.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(10)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('10')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=10" class="view-details-link" draggable="false">
@@ -385,7 +385,7 @@
                 <div class="product-f-image">
                   <img src="images/small/img9.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(9)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('9')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=9" class="view-details-link" draggable="false">
@@ -408,7 +408,7 @@
                 <div class="product-f-image">
                   <img src="images/large/img15.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(15)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('15')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=15" class="view-details-link" draggable="false">
@@ -431,7 +431,7 @@
                 <div class="product-f-image">
                   <img src="images/large/img22.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(22)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('22')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=22" class="view-details-link" draggable="false">
@@ -454,7 +454,7 @@
                 <div class="product-f-image">
                   <img src="images/large/img17.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(17)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('17')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=17" class="view-details-link" draggable="false">
@@ -477,7 +477,7 @@
                 <div class="product-f-image">
                   <img src="images/pokemon/img31.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(23)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('23')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=23" class="view-details-link" draggable="false">
@@ -500,7 +500,7 @@
                 <div class="product-f-image">
                   <img src="images/pokemon/img61.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(54)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('54')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=54" class="view-details-link" draggable="false">
@@ -523,7 +523,7 @@
                 <div class="product-f-image">
                   <img src="images/pokemon/img62.jpg" alt="" style="width: 205px; height: 257px;" />
                   <div class="product-hover">
-                    <a href="javascript:addToCart(55)" class="add-to-cart-link" draggable="false">
+                    <a href="javascript:addToCart('55')" class="add-to-cart-link" draggable="false">
                       <i class="fa fa-shopping-cart"></i> Mua hàng
                     </a>
                     <a href="single-product.html?id=55" class="view-details-link" draggable="false">
