--- a/single-product.html
+++ b/single-product.html
@@ -472,9 +472,9 @@
                             <div class="product-f-image">
                               <img style=" height: 297px;" src="${data[i].LinkImageSP}"alt="">
                               <div class="product-hover">
-                                <a href="" class="add-to-cart-link">
+                                <a href="javascript: addToCart('${data[i].Id}',1)" class="add-to-cart-link">
                                     <i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
-                                <a href="single-product.html" class="view-details-link"href="single-product.html?id=${data[i].Id}">
+                                <a class="view-details-link" href="single-product.html?id=${data[i].Id}">
                                 <i class="fa fa-link"></i>Thông tin</a>
                               </div>
                             </div>
