--- a/single-product.html
+++ b/single-product.html
@@ -291,10 +291,10 @@
           <div class="product-content-right">
             <div class="product-breadcroumb">
               <a href="index.html">Trang chủ</a>
-              <a href="">
+              <a href="javascript:document.location.href = `shop.html?category=${data[LoadSP].Category}`">
                 <script>document.write(data[LoadSP].Category);</script>
               </a>
-              <a href="">
+              <a href="#">
                 <script>document.write(data[LoadSP].NameSP);</script>
               </a>
               <!-- 
@@ -472,7 +472,7 @@
                             <div class="product-f-image">
                               <img style=" height: 297px;" src="${data[i].LinkImageSP}"alt="">
                               <div class="product-hover">
-                                <a href="" class="add-to-cart-link">
+                                <a href="javascript:addToCart(${data[i].Id})" class="add-to-cart-link">
                                     <i class="fa fa-shopping-cart"></i>Thêm vào giỏ</a>
                                 <a href="single-product.html" class="view-details-link"href="single-product.html?id=${data[i].Id}">
                                 <i class="fa fa-link"></i>Thông tin</a>
